--- a/load1.html
+++ b/load1.html
@@ -111,12 +111,13 @@
         
         <label for="phaseSelector">Select Phase:</label>
         <select id="phaseSelector">
+            <option value="General" selected>General</option>
             <option value="Base">Base</option>
             <option value="Build" selected>Build</option>
             <option value="Peak">Peak</option>
         </select>
         
-        <label>VCR Pace:</label>
+        <label>LT Pace (หรือใช้ 60 mins Pace):</label>
         <div class="inline">
             <input type="number" id="vcr_minutes" name="vcr_minutes" placeholder="Minutes" required>
             <input type="number" id="vcr_seconds" name="vcr_seconds" placeholder="Seconds" required>
@@ -127,8 +128,8 @@
     <div id="daily-load"></div>
 
     <script>
-        const zones = ['Z1', 'Z2', 'Z3', 'Z4-Z6'];
-        let percentages = [0.20, 0.50, 0.15, 0.2]; // Default to Build
+        const zones = ['Z1 Recovery/Warm up/Cool down', 'Z2 Aerobic Base(AB)','Z2 Aerobic Threshold(AT)', 'Z3 Low Tempo', 'Z4 Hard Tempo' , 'Z5-Z6 VO2MAX'];
+        let percentages = [0.10, 0.50, 0.15, 0.15, 0.1, 0.1]; // Default to Build
         const durationConstants = [0.8, 1.60, 2.58, 3.60];
         const distanceMultipliers = [0.7, 0.80, 0.9, 0.98];
 
@@ -141,17 +142,20 @@
         function updatePercentages() {
             const phase = document.getElementById('phaseSelector').value;
             switch (phase) {
+                case 'General':
+                    percentages = [0.10, 0.45, 0.25, 0.1, 0.1, 0.0];
+                    break;
                 case 'Base':
-                    percentages = [0.20, 0.60, 0.15, 0.05];
+                    percentages = [0.10, 0.65, 0.15, 0.1, 0.0, 0.0];
                     break;
                 case 'Build':
-                    percentages = [0.20, 0.50, 0.10, 0.2];
+                    percentages = [0.10, 0.50, 0.15, 0.15, 0.1, 0.1];
                     break;
                 case 'Peak':
-                    percentages = [0.20, 0.40, 0.2, 0.2];
+                    percentages = [0.05, 0.30, 0.25, 0.2, 0.1, 0.1];
                     break;
                 default:
-                    percentages = [0.20, 0.50, 0.10, 0.2]; // Default to Build
+                    percentages = [0.10, 0.50, 0.15, 0.15, 0.1, 0.1]; // Default to General
             }
         }
 
