--- a/load1.html
+++ b/load1.html
@@ -113,7 +113,7 @@
         <select id="phaseSelector">
             <option value="General" selected>General</option>
             <option value="Base">Base</option>
-            <option value="Build" selected>Build</option>
+            <option value="Build">Build</option>
             <option value="Peak">Peak</option>
         </select>
         
