--- a/load1.html
+++ b/load1.html
@@ -130,8 +130,8 @@
     <script>
         const zones = ['Z1 Recovery/Warm up/Cool down', 'Z2 Aerobic Base(AB)','Z2 Aerobic Threshold(AT)', 'Z3 Low Tempo', 'Z4 Hard Tempo' , 'Z5-Z6 VO2MAX'];
         let percentages = [0.10, 0.50, 0.15, 0.15, 0.1, 0.1]; // Default to Build
-        const durationConstants = [0.8, 1.60, 2.58, 3.60];
-        const distanceMultipliers = [0.7, 0.80, 0.9, 0.98];
+        const durationConstants = [0.511, 1.372, 1.731, 2.452, 3.475, 4.925];
+        const distanceMultipliers = [0.65, 0.75, 0.80, 0.90, 0.97, 1.08];
 
         // Update percentages based on dropdown
         document.getElementById('phaseSelector').addEventListener('change', () => {
