--- a/load1.html
+++ b/load1.html
@@ -114,7 +114,6 @@
             <option value="General" selected>General</option>
             <option value="Base">Base</option>
             <option value="Build">Build</option>
-            <option value="Peak">Peak</option>
         </select>
         
         <label>LT Pace (หรือใช้ 60 mins Pace):</label>
@@ -129,7 +128,7 @@
 
     <script>
         const zones = ['Z1 Recovery/Warm up/Cool down', 'Z2 Aerobic Base(AB)','Z2 Aerobic Threshold(AT)', 'Z3 Low Tempo', 'Z4 Hard Tempo' , 'Z5-Z6 VO2MAX'];
-        let percentages = [0.10, 0.50, 0.15, 0.15, 0.1, 0.1]; // Default to Build
+        let percentages = [0.10, 0.40, 0.25, 0.15, 0.10, 0.0]; // Default to General
         const durationConstants = [0.511, 1.372, 1.731, 2.452, 3.475, 4.925];
         const distanceMultipliers = [0.65, 0.75, 0.80, 0.90, 0.97, 1.08];
 
@@ -143,19 +142,16 @@
             const phase = document.getElementById('phaseSelector').value;
             switch (phase) {
                 case 'General':
-                    percentages = [0.10, 0.45, 0.25, 0.1, 0.1, 0.0];
+                    percentages = [0.10, 0.40, 0.25, 0.15, 0.10, 0.0];
                     break;
                 case 'Base':
-                    percentages = [0.10, 0.65, 0.15, 0.1, 0.0, 0.0];
+                    percentages = [0.10, 0.50, 0.25, 0.15, 0.0, 0.0];
                     break;
                 case 'Build':
-                    percentages = [0.10, 0.50, 0.15, 0.15, 0.1, 0.1];
-                    break;
-                case 'Peak':
-                    percentages = [0.05, 0.30, 0.25, 0.2, 0.1, 0.1];
+                    percentages = [0.10, 0.30, 0.20, 0.15, 0.10, 0.15];
                     break;
                 default:
-                    percentages = [0.10, 0.50, 0.15, 0.15, 0.1, 0.1]; // Default to General
+                    percentages = [0.10, 0.40, 0.25, 0.15, 0.10, 0.0]; // Default to General
             }
         }
 
