--- a/pace1.html
+++ b/pace1.html
@@ -76,6 +76,11 @@
             color: #666;
         }
 
+            /* เพิ่มสไตล์สำหรับระยะทาง */
+    #distance {
+        width: 100px; /* ปรับความกว้างเพิ่มเป็น 2 เท่า */
+    }
+
     </style>
     <script>
         function calculateTime() {
