--- a/load1.html
+++ b/load1.html
@@ -118,8 +118,8 @@
         
         <label>LT Pace (หรือใช้ 60 mins Pace):</label>
         <div class="inline">
-            <input type="number" id="vcr_minutes" name="vcr_minutes" placeholder="Minutes" required>
-            <input type="number" id="vcr_seconds" name="vcr_seconds" placeholder="Seconds" required>
+            <input type="number" id="vcr_minutes" name="vcr_minutes" placeholder="Minutes" min="0" required>
+            <input type="number" id="vcr_seconds" name="vcr_seconds" placeholder="Seconds" min="0" max="59" required>
         </div>
     </form>
 
