--- a/load1.html
+++ b/load1.html
@@ -109,7 +109,7 @@
         <label for="weekly_time">Weekly Duration Training (Minutes):<span title="5 ชั่วโมง ก็ 300 นาที">ℹ️</span></label>
         <input type="number" id="weekly_time" name="weekly_time" placeholder="240 mins beginner - > 840 mins Leisurist" required>
         
-        <label for="phaseSelector">Select Phase:</label>
+        <label for="phaseSelector">Select Phase:<span title="วิ่งทั่วๆไปก็ General ถ้าเตรียมการซ้อมเป็นช่วงก็เลือก Base หรือ Build">ℹ️</span></label>
         <select id="phaseSelector">
             <option value="General" selected>General</option>
             <option value="Base">Base</option>
