--- a/load1.html
+++ b/load1.html
@@ -59,9 +59,8 @@
             background-color: #0056b3;
         }
         table {
-            margin: 20px auto;
             border-collapse: collapse;
-            width: 80%;
+            width: 100%;
             background-color: white;
         }
         table, th, td {
@@ -77,6 +76,15 @@
         }
         td:nth-child(1), td:nth-child(2), td:nth-child(3), td:nth-child(4) {
             width: 15%;
+        }
+        #table-container {
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            background-color: #ffffff;
+            max-width: 80%;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         #daily-load {
             text-align: center;
@@ -101,9 +109,6 @@
 </head>
 <body>
 
-    <div id="menu-container"></div>
-    <script src="menu.js"></script>
-
     <h1>Training Load Calculator</h1>
     <form>
         <label for="weekly_time">Weekly Duration Training (Minutes):<span title="5 ชั่วโมง ก็ 300 นาที">ℹ️</span></label>
@@ -123,7 +128,11 @@
         </div>
     </form>
 
-    <div id="result" style="text-align: center; margin-top: 20px;"></div>
+    <div id="result" style="text-align: center; margin-top: 20px;">
+        <div id="table-container">
+            <!-- Table will be inserted here -->
+        </div>
+    </div>
     <div id="daily-load"></div>
 
     <script>
@@ -133,7 +142,6 @@
             const durationConstants = [0.767, 1.372, 1.731, 2.452, 3.475, 4.925];
             const distanceMultipliers = [0.65, 0.75, 0.80, 0.90, 0.97, 1.08];
 
-            // อัปเดตเปอร์เซ็นต์ตาม Phase
             function updatePercentages() {
                 const phase = document.getElementById('phaseSelector').value;
                 switch (phase) {
@@ -149,7 +157,6 @@
                 }
             }
 
-            // คำนวณ Training Load
             function calculateTrainingLoad() {
                 const weeklyTIME = parseInt(document.getElementById('weekly_time').value) || 0;
                 const vcrMinutes = parseInt(document.getElementById('vcr_minutes').value) || 0;
@@ -157,7 +164,7 @@
                 const vcrPaceSeconds = (vcrMinutes * 60) + vcrSeconds;
 
                 if (!weeklyTIME || !vcrPaceSeconds) {
-                    document.getElementById('result').innerHTML = '<p>Please enter valid values!</p>';
+                    document.getElementById('table-container').innerHTML = '<p>Please enter valid values!</p>';
                     document.getElementById('daily-load').innerHTML = '';
                     return;
                 }
@@ -196,12 +203,11 @@
                 tableHTML += '</table>';
 
                 const dailyLoad = Math.floor(totalTL / 7);
-                document.getElementById('result').innerHTML = tableHTML;
+                document.getElementById('table-container').innerHTML = tableHTML;
                 document.getElementById('daily-load').innerHTML = 
                     `Daily Load: <strong>${dailyLoad}</strong>`;
             }
 
-            // ตรวจสอบและคำนวณใหม่ทุกครั้งที่เปลี่ยนแปลง
             document.getElementById('weekly_time').addEventListener('input', calculateTrainingLoad);
             document.getElementById('vcr_minutes').addEventListener('input', calculateTrainingLoad);
             document.getElementById('vcr_seconds').addEventListener('input', calculateTrainingLoad);
@@ -210,7 +216,6 @@
                 calculateTrainingLoad();
             });
 
-            // คำนวณค่าเริ่มต้นเมื่อโหลดหน้าเสร็จ
             calculateTrainingLoad();
         });
     </script>
